# -CropWatch-CPP_Tutorials_Pointers

./: .gitignore  CMakeLists.txt  README.md  pointer_demo  pointer_tests
include/: additional_cpp20_features.hpp  cpp20_utils.hpp  pointer_examples.hpp  test_framework.hpp
src/: additional_cpp20_features.cpp  main.cpp  pointer_examples.cpp
tests/: test_main.cpp
